--- a/Makefile_CM7
+++ b/Makefile_CM7
@@ -11,11 +11,12 @@ OPT = -Og
 #######################################
 # paths
 #######################################
-# Build path
-BUILD_DIR = build
 
-# Set the root DIR to CM7
+# Set the core DIR to CM7
 CORE_DIR = CM7
+
+# Build path
+BUILD_DIR = build/$(CORE_DIR)
 
 C_SOURCES = \
 $(CORE_DIR)/Core/Src/main.c \
